# prk_firmware

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Gemfile  Guardfile  LICENSE  README.md  Rakefile  Steepfile  compose.yml  gen_tcode_table.rb  hid.c  main.c  setup.sh  tusb_config.h  usb_descriptors.h
.github/workflows/: ruby.yml
include/: flash_disk.h  gpio.h  joystick.h  keyboard.h  machine.h  midi.h  msc_disk.h  picorubyvm.h  raw_hid.h  rotary_encoder.h  sounder.h  tcode_table.h  tusb_config.h  uart.h  usb_descriptors.h  version.h  version.h.in  ws2812.h
lib/: CMakeLists.txt
lib/hal/: hal.c  hal.h
mock/: Makefile  keyboard_mock  main.c
mrb_lib/: hid.c  hid.rb  led.c  led.rb  tud.c  tud.rb
mrblib/: object-ext.rb  rgb_task.rb  usb_task.rb
mrblib/ext/: float_ext.c  float_ext.rb  object.c  object.rb
sig/: machine.rbs  microcontroller.rbs  object.rbs
src/: flash_disk.c  gamepad.c  gamepad.h  glcdfont.c  gpio.c  gpio.h  hal.c  i2c.c  i2c.h  io_rp2040.c  joystick.c  joystick.h  keyboard.c  machine.c  main.c  midi.c  msc_disk.c  msc_disk.h  oled.c  oled.h  picorubyvm.c  pwm.c  pwm.h  raw_hid.c  raw_hid.h  rgb.c  rgb.h  rotary_encoder.c  rotary_encoder.h  ruby_mode.c  ruby_mode.h  sandbox.c  sandbox.h  sounder.c  sounder.h  sounder.pio  tcode_table.c  tone.c  tone.h  tone.pio  (+15 more)
src/ruby/: .gitignore  Gemfile  Guardfile  Mrubycfile  Rakefile  Steepfile  hid.rb  keyboard.rb  keyboards  keymap.rb  led.rb  rgb.rb
src/ruby/app/: .gitignore
src/ruby/app/ext/: README.md  object.rb
src/ruby/app/models/: buffer.rb  consumer.rb  consumer_key.rb  debounce.rb  debouncer.rb  gamepad.rb  joystick.rb  keyboard.rb  keycode.rb  keyevent.rb  mml.rb  mode_key.rb  pwm.rb  rgb.rb  rotary_encoder.rb  sandbox.rb  sounder.rb  tone.rb  via.rb
src/ruby/app/tasks/: rgb_task.rb  usb_task.rb
src/ruby/lib/: buffer.rb  core.rb  keyboard.rb  rgb.rb  rgb_task.rb  rotary_encoder.rb  tud.rb
src/ruby/sig/: array.rbs  buffer.rbs  consumer.rbs  consumer_key.rbs  debouncer.rbs  gamepad.rbs  joystick.rbs  keyboard.rbs  mml.rbs  mode_key.rbs  object.rbs  pwm.rbs  rgb.rbs  rotary_encoder.rbs  sandbox.rbs  sounder.rbs  tone.rbs  via.rbs
src/ruby/test/: keyboard_test.rb  mml_test.rb  via_test.rb
src/ruby/test/tmp/: .gitignore  hal  main.c
src/ruby/www-steep/: .gitignore  Rakefile
src/ruby/www-steep/backend/: Gemfile  package-lock.json  package.json  serverless.yml
src/ruby/www-steep/backend/app/: handler.rb
src/ruby/www-steep/backend/steep/: Steepfile
src/ruby/www-steep/backend/steep/sig/: .gitignore  float.rbs  keyboard.rbs  rgb.rbs  rotary_encoder.rbs
src/ruby/www-steep/frontend/: Gemfile  app.js  app.rb  index.html
symlinks/: README.md
test/: Mrubycfile
test/models/: _require.rb  consumer_key.rb  debounce.rb  fat.rb  float.rb  gpio.rb  gpio_c.rb  joystick.rb  keyboard.rb  midi.c  midi.rb  mml.rb  mml2midi.rb  mouse.rb  rgb.rb  rotary_encoder.rb  sounder.rb  task.rb  usb.rb  via.rb
test/tests/: keyboard_test.rb  midi_test.rb  mml2midi_test.rb  via_test.rb
tinyusb/: tusb_config.h
